# middlewares/authentication.js
@@ -3,7 +3,7 @@ const jwt = require('jsonwebtoken');
 const Promise = require('bluebird');
 async function validateFacebookToken(req, res, next){
   try{
-   let token= req.query.access_token;
+   let token= req.body.access_token;
    const profileDetails= await rp(process.env.FACEBOOK_ME_URL+token)
    req.FBprofileDetails = profileDetails;
    next();
